syntax = "proto3";

package auth;
option go_package = "github.com/Sagar-v4/Angel-Two/protobuf/gen/auth"; 

message GenerateRequest {
    string jwt_token = 1 [ json_name = "jwt_token" ];
    string feed_token = 2 [ json_name = "feed_token" ];
    string refresh_token = 3 [ json_name = "refresh_token" ];
}

message GenerateResponse {
    string user_token = 1 [ json_name = "user_token" ];
}

message TokenActionRequest {
    string user_token = 1 [ json_name = "user_token" ];
}

message LogoutResponse {
    bool success = 1 [ json_name = "success" ];
    string message = 2 [ json_name = "message" ];
}

message VerifyResponse {
    bool success = 1 [ json_name = "success" ];
    repeated string tokens = 3 [ json_name = "tokens" ];
}

service Auth {
    rpc Generate(GenerateRequest) returns (GenerateResponse);
    rpc Verify(TokenActionRequest) returns (VerifyResponse);
    rpc Logout(TokenActionRequest) returns (LogoutResponse); 
}